--- a/python_webapp/{{cookiecutter.project_name}}/docker-compose.yml
+++ b/python_webapp/{{cookiecutter.project_name}}/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-  web:
-    build: .
-    ports:
-      - "8000:8000"
-    environment:
-      - APP_MODULE=main.app:app
-      - PORT=8000
+  # web:
+  #   build: .
+  #   ports:
+  #     - "8000:8000"
+  #   environment:
+  #     - APP_MODULE=main.app:app
+  #     - PORT=8000
   postgres:
     image: postgres:14
     container_name: postgres14
